# Grandma

./: .env  .env.template  .gitignore  Cargo.toml  Makefile  Procfile  README.md  example.md
.github/ISSUE_TEMPLATE/: dev-work.md
src/: main.rs  twilio.rs
twilio-rust/: Cargo.toml  README.md
twilio-rust/.openapi-generator/: FILES
twilio-rust/docs/: ApiV2010Account.md  ApiV2010AccountAddress.md  ApiV2010AccountAddressDependentPhoneNumber.md  ApiV2010AccountApplication.md  ApiV2010AccountAuthorizedConnectApp.md  ApiV2010AccountAvailablePhoneNumberCountry.md  ApiV2010AccountAvailablePhoneNumberCountryAvailablePhoneNumberLocal.md  ApiV2010AccountAvailablePhoneNumberCountryAvailablePhoneNumberMachineToMachine.md  ApiV2010AccountAvailablePhoneNumberCountryAvailablePhoneNumberMobile.md  ApiV2010AccountAvailablePhoneNumberCountryAvailablePhoneNumberNational.md  ApiV2010AccountAvailablePhoneNumberCountryAvailablePhoneNumberSharedCost.md  ApiV2010AccountAvailablePhoneNumberCountryAvailablePhoneNumberTollFree.md  ApiV2010AccountAvailablePhoneNumberCountryAvailablePhoneNumberVoip.md  ApiV2010AccountBalance.md  ApiV2010AccountCall.md  ApiV2010AccountCallCallEvent.md  ApiV2010AccountCallCallFeedback.md  ApiV2010AccountCallCallFeedbackSummary.md  ApiV2010AccountCallCallNotification.md  ApiV2010AccountCallCallNotificationInstance.md  ApiV2010AccountCallCallRecording.md  ApiV2010AccountCallPayments.md  ApiV2010AccountCallSiprec.md  ApiV2010AccountCallStream.md  ApiV2010AccountConference.md  ApiV2010AccountConferenceConferenceRecording.md  ApiV2010AccountConferenceParticipant.md  (+108 more)
(+197 files in other folders)
