[package]
name = "grandma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2"}
dotenv = "0.15.0"
openapi = { path = "./twilio-rust" }
tokio = { version = "1.14.0", features = ["full"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }